<resources>
    <string name="app_name">Faircorp</string>
    <string name="app_logo_description">Faircorp logo</string>

    <string name="act_main_windowname_hint">Window name</string>
    <string name="act_main_welcome">Welcome on faircorp,\n the app to manage building windows</string>
    <string name="act_main_open_window">Open window</string>

    <string name="menu_rooms">Building rooms</string>
    <string name="menu_windows">Building windows</string>
    <string name="menu_heaters">Building heaters</string>
    <string name="menu_website">Our website</string>
    <string name="menu_email">Send us an email</string>

    <string name="act_window_name">Window name</string>
    <string name="act_window_room">Room</string>
    <string name="act_window_room_target_temp">Target room temperature</string>
    <string name="act_window_room_current_temp">Current room temperature</string>
    <string name="act_window_status">Status</string>

    <string name="act_heater_name">Heater name</string>
    <string name="act_heater_room">Room</string>
    <string name="act_heater_room_target_temp">Target room temperature</string>
    <string name="act_heater_room_current_temp">Current room temperature</string>
    <string name="act_heater_status">Status</string>
    <string name="act_power_status">Power</string>

    <string name="act_window_switch">Open</string>
    <string name="act_window_switch_on">Opened</string>
    <string name="act_window_switch_off">Closed</string>

    <string name="act_heater_switch">Switch</string>
    <string name="act_heater_switch_on">ON</string>
    <string name="act_heater_switch_off">OFF</string>

    <string name="act_room_name">Room name</string>
    <string name="act_room_building_name">Building</string>
    <string name="act_room_floor">Floor</string>
    <string name="act_room_target_temp">Target temperature</string>
    <string name="act_room_current_temp">Current temperature</string>
    <string name="act_room_heater_list">Heater List</string>
    <string name="act_room_window_list">Window List</string>
</resources>